<resources>
    <string name="app_name">Puerta Covid</string>
    <string name="historial">Historial</string>
    <string name="cuenta">Cuenta</string>
    <string name="salir">Salir</string>
    <string name="inicio">Inicio</string>
    <string name="select_language">Selecciona el lenguaje</string>
    <string name="aforo">Aforo</string>
    <string name="puertasegura">Puerta Segura</string>
    <string name="abrirpuerta">Abrir Puerta</string>
    <string name="cerrarpuerta">Cerrar Puerta</string>
    <string name="usuario">Usuario</string>
    <string name="administrador">Administrador</string>
    <string name="cuentausuario">Cuenta Usuario</string>
    <string name="conectar">Conectar</string>
    <string name="capacidad">Capacidad: 20 personas</string>
    <string name="buscar">Buscar</string>
    <string name="conectar_bt">Conectar dispositivo</string>
    <string name="recuperacontraseña">Recupera tu contraseña</string>
    <string name="ingresaemail">Ingresa tu correo</string>
    <string name="reestablecercontraseña">Reestablecer contraseña</string>
    <string name="continuar_no_bt">Continuar sin BT</string>
    <string name="automatizar">Automatizar</string>

</resources>